<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context="com.worldline.in.worldlineipgsdk.CardCapture">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/til_customer_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/customer_name_hint"
                android:inputType="text"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </EditText>

            <EditText
                android:id="@+id/til_card_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/card_number_hint"
                android:inputType="number"
                android:maxLength="16"
                android:maxLines="1">

            </EditText>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/til_expiry_month"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:hint="@string/mm"
                    android:inputType="number"
                    android:maxLength="2"
                    android:maxLines="1"
                    app:layout_constraintStart_toStartOf="@+id/til_card_number"
                    app:layout_constraintTop_toBottomOf="@+id/til_card_number">

                </EditText>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pipe_separator"/>

                <EditText
                    android:id="@+id/til_expiry_year"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="30dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:hint="@string/yy"
                    android:inputType="number"
                    android:maxLength="4"
                    android:maxLines="1"
                    app:layout_constraintStart_toStartOf="@+id/til_card_number"
                    app:layout_constraintTop_toBottomOf="@+id/til_card_number">

                </EditText>


                <EditText
                    android:id="@+id/til_cvv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:gravity="center_horizontal"
                    android:hint="@string/cvv_hint"
                    android:inputType="number"
                    android:maxLength="3"
                    android:maxLines="1" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="0dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="24dp"
                android:text="@string/pay_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_cvv"
                tools:layout_editor_absoluteX="175dp"
                tools:layout_editor_absoluteY="306dp" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
